fix overflow issue on body

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ body {
 }
 
 body {
+  overflow-x: hidden;
   font-family: 'Bitter', serif;
   font-size: 16px;
   line-height: 28px;
